#34204: remove extraneous XML parsers/libraries from NetBeans build, since JDK 1.4 already includes the APIs & Crimson. Modules wishing to specifically use Xerces can use libs/xerces, the preexisting autoload wrapper module for the Xerces parser impl.

--- a/apisupport.ant/build.xml
+++ b/apisupport.ant/build.xml
@@ -70,9 +70,8 @@ Microsystems, Inc. All Rights Reserved.
             <fileset dir="../..">
                 <include name="nbbuild/external/ant-1.*.jar"/>
                 <include name="nbbuild/external/jhall*.jar"/>
-                <include name="core/external/xml-apis*.jar"/>
-                <include name="core/external/xerces*.jar"/>
                 <include name="core/external/regexp*.jar"/>
+                <include name="libs/external/xerces*.jar"/>
             </fileset>
         </path>
     </target>
