--- a/nbbuild/build.properties
+++ b/nbbuild/build.properties
@@ -108,6 +108,7 @@ config.modules.slim=${config.modules.superslim}, \
 local.config.libs=libs/xalan, \
         libs/jaxp, \
         libs/xerces, \
+        libs/regexp, \
         libs/j2eeeditor
 
 local.config.xml=xml/api, \
