--- a/apisupport.ant/build.xml
+++ b/apisupport.ant/build.xml
@@ -70,7 +70,7 @@ Microsystems, Inc. All Rights Reserved.
             <fileset dir="../..">
                 <include name="nbbuild/external/ant-1.*.jar"/>
                 <include name="nbbuild/external/jhall*.jar"/>
-                <include name="core/external/regexp*.jar"/>
+                <include name="libs/external/regexp*.jar"/>
                 <include name="libs/external/xerces*.jar"/>
             </fileset>
         </path>
