--- a/diff/build.xml
+++ b/diff/build.xml
@@ -8,7 +8,7 @@ compliance with the License. A copy of the License is available at
 http://www.sun.com/
 
 The Original Code is NetBeans. The Initial Developer of the Original
-Code is Sun Microsystems, Inc. Portions Copyright 1997-2002 Sun
+Code is Sun Microsystems, Inc. Portions Copyright 1997-2003 Sun
 Microsystems, Inc. All Rights Reserved.
 -->
 
@@ -39,7 +39,7 @@ Microsystems, Inc. All Rights Reserved.
 	<pathelement location="${nbroot}/openide/openide-13javac-workaround.jar"/>
         <pathelement location="../openide/netbeans/lib/openide.jar"/>
         <pathelement location="../openide/loaders/netbeans/lib/openide-loaders.jar"/>
-        <fileset dir="${nbroot}/core/external">
+        <fileset dir="${nbroot}/libs/external">
           <include name="regexp*.jar"/>
         </fileset>
       </classpath>
