--- a/o.n.core/build.xml
+++ b/o.n.core/build.xml
@@ -22,7 +22,7 @@ Microsystems, Inc. All Rights Reserved.
   <property name="license.file" location="../nbbuild/standard-nbm-license.txt"/>
 
   <target name="compile" depends="boot">
-    <javac srcdir="src" destdir="src" deprecation="${build.compiler.deprecation}" debug="${build.compiler.debug}">
+    <javac srcdir="src" destdir="src" deprecation="${build.compiler.deprecation}" debug="${build.compiler.debug}" source="1.4">
       <classpath>
         <pathelement location="../openide/openide-13javac-workaround.jar"/>
         <pathelement location="../openide/netbeans/lib/openide.jar"/>
