--- a/o.n.core/src/org/netbeans/core/ui/Bundle.properties
+++ b/o.n.core/src/org/netbeans/core/ui/Bundle.properties
@@ -209,6 +209,9 @@ PROP_modules_eager=Eager
 HINT_modules_eager=If True, this module is turned on whenever it can be turned on.
 PROP_modules_provides=Provides
 HINT_modules_provides=Named capabilities this module provides to others.
+PROP_modules_usedby=Used By
+HINT_modules_usedby=Other modules using this module. Only applicable when this module is enabled.
+LBL_please_wait_modules_usedby=Please wait...
 PROP_modules_problemDescriptions=Problems
 HINT_modules_problemDescriptions=Descriptions of problems (if any) preventing this module from being enabled.
 #MSG_UninstallOthers=Some modules depend on this module. When this module is uninstalled,\n\
