Added possibility to switch-off the commit-validation suite, which is run also on moduleconfigs, which are not intended to be tested by commit-validation

--- a/nbbuild/build.properties
+++ b/nbbuild/build.properties
@@ -1,5 +1,6 @@
 netbeans.dest=netbeans
 test.user.dir=testuserdir
+nb.run.validation=true
 # Options to pass to NetBeans when starting it with "ant tryme":
 tryme.args=
 build.compiler.debug=on
