Working on JSR77 implementation

--- a/tomcat5/src/org/netbeans/modules/tomcat5/Bundle.properties
+++ b/tomcat5/src/org/netbeans/modules/tomcat5/Bundle.properties
@@ -14,3 +14,7 @@
 # TomcatFactory
 LBL_TomcatFactory=Tomcat 5 server
 LBL_TomcatFactoryVersion=Tomcat Plugin prototype
+
+# TargetMapper
+# 0 = host, 1 port number (avoid chars like : = in this key)
+LBL_mgmtNodeName={0} at {1}
