--- a/o.n.core/src/org/netbeans/core/Bundle.properties
+++ b/o.n.core/src/org/netbeans/core/Bundle.properties
@@ -637,6 +637,11 @@ EXC_nbres_cannot_connect=Could not connect to URL {0}. No such resource was foun
 CTL_SdiMode=SDI Mode
 CTL_MdiMode=MDI Mode
 
+# ExJarFileSystem, ExLocalFileSystem
+FS_MissingMountPoint=Missing {0}
+FS_DuplicateFileSystem=Duplicate {0}
+FS_Refresh=Refresh
+
 # NbPlaces
 CTL_NoWorkspaces=No Workspaces
 
