Adding core/registry module target and its JavaDoc target.

--- a/nbbuild/build.properties
+++ b/nbbuild/build.properties
@@ -294,6 +294,7 @@ config.fixedmodules.javadoc=openide, \
 config.modules.javadoc=jemmy, \
         jellytools, \
         openide/registry, \
+        core/registry, \
         openide/looks, \
 	core/term
 
