--- a/masterfs/build.xml
+++ b/masterfs/build.xml
@@ -102,9 +102,9 @@ Microsystems, Inc. All Rights Reserved.
           <property name="javadoc.packages" value="org.netbeans.api.masterfs,org.netbeans.spi.masterfs"/>
           <property name="javadoc.classpath" value="${_cp}"/>
           <!--<property name="javadoc.arch" location="../arch/arch-openide-registry.xml"/>-->
-          <property name="javadoc.docfiles" location="api/doc"/>
+          <!--<property name="javadoc.docfiles" location="api/doc"/>
           <property name="javadoc.overview" location="api/doc/overview.html"/>
-         <property name="javadoc.apichanges" location="api/apichanges.xml"/>
+         <property name="javadoc.apichanges" location="api/apichanges.xml"/> -->
         </ant>
     </target>
 
