--- a/tomcat5/build.xml
+++ b/tomcat5/build.xml
@@ -8,7 +8,7 @@ compliance with the License. A copy of the License is available at
 http://www.sun.com/
 
 The Original Code is NetBeans. The Initial Developer of the Original
-Code is Sun Microsystems, Inc. Portions Copyright 1997-2000 Sun
+Code is Sun Microsystems, Inc. Portions Copyright 1997-2003 Sun
 Microsystems, Inc. All Rights Reserved.
 -->
 
@@ -104,14 +104,12 @@ Microsystems, Inc. All Rights Reserved.
   </target>
 
     <target name="javadoc" description="Build Javadoc.">
-        <!-- Ant 1.4 bug workaround: <property refid="..."/> does not work inside <ant> -->
-        <property name="_cp" refid="cp"/>
         <ant dir="../../nbbuild/javadoctools" antfile="template.xml" target="javadoc">
             <property name="javadoc.base" location="."/>
             <property name="javadoc.name" value="Tomcat5PluginAPI"/>
             <property name="javadoc.title" value="Tomcat 5 Plugin API"/>
             <property name="javadoc.packages" value="org.netbeans.modules.tomcat5,org.netbeans.modules.tomcat5.ide,org.netbeans.modules.tomcat5.nodes,org.netbeans.modules.tomcat5.progress"/>
-            <property name="javadoc.classpath" value="${_cp}"/>
+            <property name="javadoc.classpath" refid="cp"/>
             <!--
             <property name="javadoc.arch" location="../arch/arch-tomcatint-tomcat5.xml"/>
             <property name="javadoc.apichanges" location="api/doc/changes/apichanges.xml"/>
