--- a/o.n.core/build.xml
+++ b/o.n.core/build.xml
@@ -59,7 +59,12 @@ Microsystems, Inc. All Rights Reserved.
 
   <target name="release">
     <copy todir="netbeans" includeEmptyDirs="false">
-      <fileset dir="release" excludesfile="../nbbuild/standard-jar-excludes.txt"/>
+      <fileset dir="release" excludesfile="../nbbuild/standard-jar-excludes.txt">
+        <!-- Unless/until OS/2 gets a JDK 1.4 port, exclude its launcher: -->
+        <exclude name="bin/runideos2.cmd"/>
+        <!-- These do not currently work anyway: -->
+        <exclude name="bin/unsupported/nbscript*"/>
+      </fileset>
     </copy>
     <fixcrlf srcdir="netbeans/bin" eol="crlf">
       <include name="**/*.bat"/>
